# Merck-Document-Comparison

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  test_script.py
.github/: CODEOWNERS  pull_request_template.md
desktop/: __init__.py  __main__.py  desktop_state.py  engine_runner.py  error_ux.py  main_window.py  profiles.py  user_prefs.py  word_options.py
docs/: ADD-JIRA-TASKS-PROMPT.md  AI-JIRA-TASKS-SUGGESTIONS.md  AI-PROMPTS-INDEX.md  BMAD-USAGE.md  BUG-REPORTING-AND-PARITY.md  CAPTURE-WORD-COMPARE-SETTINGS.md  CLI-MERCK-COMPARE.md  CONTEXT-CHANGE-POLICY.md  INSTALL.md  JIRA-AND-BACKLOG.md  MDC-018-MOVE-DETECTION-V1.md  PRE-PUSH-CHECKLIST.md  PRODUCT-DECISIONS.md  PROJECT-PLAN-V1.md  SCRUM-100-SPRINT3-AUDIT.md  SCRUM-102-SPRINT5-AUDIT.md  SCRUM-43-SUBTASK-AUDIT.md  SCRUM-48-SPRINT2-AUDIT.md  TASKS-V1.md  TEAM-PLAYBOOK.md  TEAM-WORKFLOW.md  V1-ACCEPTANCE-CATALOG.md
engine/: CONTRACTS.md  __init__.py  body_compare.py  body_revision_emit.py  compare_cli.py  compare_keys.py  contracts.py  corpus_harness.py  diff_tokens.py  document_package.py  docx_body_ingest.py  docx_output_package.py  docx_package_parts.py  inline_run_diff.py  ooxml_namespace.py  paragraph_alignment.py  preflight_validation.py  table_diff.py
golden-corpus-output-smoke/: email1-bladder.docx  email1-cervical.docx  email2-v940.docx  email3-ib-6-8.docx  email3-protocol-1026.docx  email3-protocol-7902.docx
golden-corpus-output-test/: email1-bladder.docx  email1-cervical.docx  email2-v940.docx  email3-ib-6-8.docx  email3-protocol-1026.docx  (+1 more)
scripts/: install.sh  (+5 more)
(+74 files in other folders)
